plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

bootJar {
    enabled = false
}



java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

subprojects {
    group = 'com.goorm'
    version = '0.0.1-SNAPSHOT'

    apply plugin: 'java'
    apply plugin: "java-test-fixtures"
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'

        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        runtimeOnly 'org.postgresql:postgresql'

        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

        implementation 'io.jsonwebtoken:jjwt:0.9.1'
        implementation 'javax.xml.bind:jaxb-api:2.3.1'

        testFixturesImplementation 'org.springframework.boot:spring-boot-starter-test'
        testFixturesImplementation 'org.springframework.security:spring-security-test'
        testFixturesRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}
